<?xml version="1.0"?>
<package format="2">
  <name>voxblox_msgs_rtmros_bridge</name>
  <version>0.0.0</version>
  <description>The voxblox_msgs_rtmros_bridge package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rtmbuild</depend>
  <depend>roscpp</depend>
  <depend>voxblox_msgs</depend>
</package>
